src/it/resources/regression/verification/invalid/Array1.scala
/* Copyright 2009-2016 EPFL, Lausanne */

import stainless.lang._

object Array1 {

  def foo(a: Array[Int]): Int = {
    a(2)
  }

}
